--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "gulp-nodemon": "^2.0.3"
   },
   "dependencies": {
-    "express": "^4.13.2"
+    "body": "^5.1.0",
+    "body-parser": "^1.13.3",
+    "express": "^4.13.2",
+    "http": "0.0.0",
+    "morgan": "^1.6.1",
+    "parser": "^0.1.4"
   }
 }
