--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.13.2",
     "http": "0.0.0",
     "morgan": "^1.6.1",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "q": "^1.4.1",
+    "xml2js": "^0.4.10"
   }
 }
