--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
     "http": "0.0.0",
+    "http-request": "^0.7.0",
     "morgan": "^1.6.1",
     "parser": "^0.1.4",
     "q": "^1.4.1",
