--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
     "http": "0.0.0",
-    "http-request": "^0.7.0",
     "morgan": "^1.6.1",
     "parser": "^0.1.4",
     "q": "^1.4.1",
+    "request": "^2.61.0",
+    "underscore": "^1.8.3",
     "xml2js": "^0.4.10"
   }
 }
