[Progress] Breaks up Map, thumbnails, and mainForm into modules

--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,4 @@
-{
+npm{
   "name": "New-Neighbor-App",
   "version": "0.0.0",
   "homepage": "https://github.com/Capstone-MakerSquare/New-Neighbors/",
