--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "foundation-apps-template",
   "version": "1.1.0",
   "scripts": {
@@ -11,7 +10,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
-    "gulp-load-plugins": "1.0.0-rc.1",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
@@ -21,5 +20,4 @@
     "yargs": "^3.15.0"
   },
   "private": true
-
 }
