--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "foundation-apps-template",
   "version": "1.1.0",
   "scripts": {
@@ -13,6 +12,7 @@
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "1.0.0-rc.1",
     "gulp-ng-html2js": "^0.2.0",
+    "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.1",
@@ -21,5 +21,4 @@
     "yargs": "^3.15.0"
   },
   "private": true
-
 }
