[Save] Stablize client.server

--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "body": "^5.1.0",
+    "body-parser": "^1.13.3",
+    "browserify": "^11.0.1",
+    "express": "^4.13.3",
     "front-router": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "1.0.0-rc.1",
@@ -16,8 +21,14 @@
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
     "gulp-webserver": "^0.9.1",
+    "http": "0.0.0",
+    "morgan": "^1.6.1",
+    "parser": "^0.1.4",
+    "q": "^1.4.1",
+    "request": "^2.61.0",
     "rimraf": "^2.4.1",
     "run-sequence": "^1.1.1",
+    "underscore": "^1.8.3",
     "yargs": "^3.15.0"
   },
   "private": true
