--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "underscore": "^1.8.3",
     "yargs": "^3.15.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "browser-sync": "^2.8.2"
+  }
 }
