--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "angular":"~1.4.5",
+    "bootstrap": "~3.3.5",
+    "angular-animate":"~1.4.5",
+    "angular-ui-router":"~0.2.15",
+    "angular-bootstrap":"0.13.4" 
   }
 }
