--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,11 @@
     "tests"
   ],
   "dependencies": {
-    "angular":"~1.4.5",
-    "bootstrap": "~3.3.5",
-    "angular-animate":"~1.4.5",
-    "angular-ui-router":"~0.2.15",
-    "angular-bootstrap":"0.13.4" 
+    "angular": "~1.4.5",
+    "angular-animate": "~1.4.5",
+    "angular-bootstrap": "0.13.4",
+    "angular-slick": "~0.2.1",
+    "angular-ui-router": "~0.2.15",
+    "bootstrap": "~3.3.5"
   }
 }
