--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "run-sequence": "^1.1.1",
     "underscore": "^1.8.3",
     "yargs": "^3.15.0"
+  },
+  "engines": {
+    "node": "0.12.x"
   }
 }
