--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "node": "4.1.x"
   },
   "devDependencies": {
-    "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
+    "del": "^2.0.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-replace": "^0.5.4",
     "gulp-concat-css": "^2.2.0",
-    "gulp-html-replace": "^1.5.4",
+    "gulp-uglifycss": "^1.0.4",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.3.0",
+    "imagemin-pngquant": "^4.2.0",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.2"
+    "gulp-html-replace": "^1.5.4"
   },
   "private": true,
   "dependencies": {
